# THEMIS

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  HOW_IT_WORKS.md  LEXAGENT_ARCHITECTURE_REVIEW_V2_FOUNDER_REALITY_CHECK.md  LEXAGENT_OS_V3_ARCHITECTURE_ROADMAP.md  README.md  docker-compose.yml  provider agnostic PLAN.md  pyproject.toml  setup.sh
CODEX-PHASES/: CODEXPHASE-1.md
analysis/: court_draft_architecture.md  current_state.md  draft_delta.md  draft_pipeline.md  draft_quality_gaps.md  formatting_engine.md  gap_analysis.md  opportunities.md  pleading_blueprints.md  priority_board.md  priority_roadmap.md  runtime_flow.md  system_inventory.md  v3_review.md
course/: README.md  index.html  serve.py
course/phase-00-python-foundations/: 01_python_basics.py  02_type_hints_typeddict.py  03_async_await.py  04_pydantic_settings.py  05_env_files.py  README.md
course/phase-01-langgraph-core/: 01_what_is_a_graph.py  02_your_first_graph.py  03_nodes_contract.py  04_conditional_routing.py  05_human_in_the_loop.py  06_checkpointers.py  README.md
course/phase-02-memory/: 01_soul_md.py  02_matter_memory.py  03_sqlite_fts5.py  04_session_store.py  README.md
course/phase-03-skills/: 01_what_is_a_skill.py  02_yaml_frontmatter.py  03_skill_loader.py  04_prompt_injection.py  README.md
course/phase-04-tools-and-apis/: 01_tool_registry.py  README.md  (+4 more)
lexagent/: chat.py  cli.py  config.py  graph.py  state.py
tests/: test_anonymizer.py  test_brakes.py  test_caching.py  test_chamber.py  test_chunker.py  test_cite.py  test_contract_review.py  test_control_plane.py  test_crypto.py  test_document_qa.py  test_docx_writer.py  test_executor.py  test_grid.py  test_ingestion_documents.py  test_ingestion_extractors.py  test_kanoon.py  test_kanoon_api.py  test_kb_collections.py  test_legal_kg.py  test_limitation.py  test_matter_isolation.py  test_matter_store.py  test_mem0_client.py  test_memory.py  test_permissions.py  test_playbook_models.py  test_provider_router.py  test_providers.py  test_query_expander.py  test_raptor_summarizer.py  test_react_research.py  test_redline.py  test_registry.py  test_reranker.py  test_research.py  test_retriever.py  test_review.py  test_runtime_jobs.py  test_runtime_models.py  test_session_tenant.py  (+16 more)
themis/: chat.py  cli.py  config.py  graph.py  state.py
(+338 files in other folders)
